server route to add a new entry to database working

--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^7.12.1",
-    "pg-template-tag": "^0.1.2"
+    "pg-template-tag": "^0.1.2",
+    "regex": "^0.1.1"
   }
 }
